<resources>
    <string name="app_name">Weather App</string>
    <string name="search">Search …</string>
    <string name="find_your_weather_predications">Find your weather predications</string>
    <string name="today">Today</string>
    <string name="weather_placeholder_image">Weather placeholder image</string>
    <string name="weather_icon">Weather icon</string>
    <string name="weather_illustration">Weather illustration</string>
    <string name="temperature_format">%.2f °C</string>
    <string name="city_detailed_format">%s , %s</string>
</resources>